--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
 *.iws
 *.iml
 *.ipr
-*.xml
 
 ### Eclipse ###
 .apt_generated
@@ -34,14 +36,4 @@ build/
 
 ### Mac OS ###
 .DS_Store
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
